# Snake_Raylib

./: CMakeLists.txt  README.md
src/: globals.c  globals.h  main.c
src/management/: grid-manager.c  grid-manager.h
src/objects/: edible.c  edible.h  snake.c  snake.h
